<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Rental Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_unit_details">Unit Details</string>
    <string name="prmtUnitType">Type: </string>
    <string name="title_activity_add_unit">Add Unit</string>
    <string name="title_activity_edit_unit">Edit Unit</string>
    <string name="strUnits">Units</string>
    <string name="strTenants">Tenants</string>
    <string name="strRepairRequests">Repair Requests</string>
    <string name="title_activity_add_tenant">Add Tenant</string>
    <string name="strSelectRoom">Which room does the repair need to be in</string>
    <string name="prmtPriority">Priority</string>
    <string name="strMyUnit">My Unit</string>
    <string name="strLandlordContact">Landlord Contact</string>
    <string name="strRequestRepair">Request Repair</string>
    <string name="prmtMyHouse">My House</string>-
    <string name="prmtRentDue">Rent Due</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="strAddTenant">Add Tenant to House</string>
    <string name="prmtFloorSize">Floor Size:</string>
    <string name="prmtTenant">Tenant:</string>
    <string name="prmtYearBuilt">Year Built:</string>
    <string name="prmtRentAmount">Rent Amount:</string>
    <string name="prmtRentDueOn">Rent Due On:</string>
    <string name="prmtBaths">Number of Baths:</string>
    <string name="prmtBeds">Number of Beds:</string>
    <string name="prmtAddress">Address:</string>
    <string name="prmtUnitName">Name:</string>
    <string name="titleNewRepairRequest">New Repair Request</string>
    <string name="titleSummary">Summary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="descUnitPhoto">Picture of Unit</string>
    <string name="descIconButton">Icon Button</string>
    <string name="icon_delete">Delete</string>
    <string name="icon_edit">Edit</string>

    <string name="title_activity_landlord_profile">LandlordProfileActivity</string>
    <string name="title_activity_edit_landlord_profile">EditLandlordProfileActivity</string>
    <string name="title_activity_request_details">RequestDetailsActivity</string>
    <string name="title_activity_tenant_details">TenantDetailsActivity</string>
    <string name="descRequestPhoto">Request Photo</string>
    <string name="descPhoneIcon">Phone Icon</string>
    <string name="descEmailIcon">Email Icon</string>
    <string name="descPersonPhoto">Person Photo</string>
    <string name="strSave2">Save</string>
    <string name="landlord_nav_header_description">Landlord\'s picture</string>
    <string name="strLogout">Logout</string>
    <string name="strAddToHouse">Add To House</string>
    <string name="strFirst_Name">First Name</string>
    <string name="strLastName">Last Name</string>
    <string name="strMobile">Mobile:</string>
    <string name="strPhoneNumberSample">(206) 201–2345</string>
    <string name="strEmail">Email:</string>
    <string name="strEmailSample">test@gmail.com</string>
    <string name="strSave">Save</string>
    <string name="lblTenantName">Tenant Name</string>
    <string name="btnSaveChanges">Save Changes</string>
    <string name="lblLandlordSample">Jed Baker</string>
    <string name="lblMobilePrompt">Mobile:</string>
    <string name="lblMobileSample">(206) 201–2345</string>
    <string name="lblEmailPrompt">Email:</string>
    <string name="lblEmailSample">test@gmail.com</string>
    <string name="btnSubmitRequest">Submit Request</string>
    <string name="rdbtnPriorityOne">!</string>
    <string name="rdbtnPriorityTwo">!!</string>
    <string name="rdbtnPriorityThree">!!!</string>
    <string name="txtEnterDescriptionHint">Enter a description</string>
    <string name="lblByPrompt">By:</string>
    <string name="lblLandlordNameSample">Rosario Barrows</string>
    <string name="imgBtnMessageLandlordDescription">Text Button</string>
    <string name="imgBtnCallLandlordDescription">Call Button</string>
    <string name="imgBtnTextHint">Text Button</string>
    <string name="lblHousePrompt">House:</string>
    <string name="txtLastNameHint">Last name</string>
    <string name="txtFirstNameHInt">First name</string>
    <string name="lblPriorityPrompt">Priority:</string>
    <string name="lblLandlordPrompt">Landlord:</string>
    <string name="lblSqFtPrompt">Sq. Ft:</string>
    <string name="lblYearBuiltPrompt">Year Built:</string>
    <string name="lblRentAmountPrompt">Rent Amount:</string>
    <string name="lblRentDuePrompt">Rent Due Date:</string>
    <string name="lblTypePrompt">Type:</string>
    <string name="lblNamePrompt">Name:</string>
    <string name="lblUnitAddressPrompt">Address:</string>
    <string name="lblBedsPrompt">Beds:</string>
    <string name="lblBathsPrompt">Baths:</string>
    <string name="btnText">Text</string>
    <string name="btnCall">Call</string>
    <string name="btnEmail">Email</string>
    <string name="imgBtnCallDescription">Call Button</string>
    <string name="imgBtnTextDescription">Text Button</string>
    <string name="lblSearch">Search</string>
    <string name="lblTenantSample1">Rosario Barrows</string>
    <string name="imgBtnCall">Text Button</string>
    <string name="navDelete">Delete</string>
    <string name="navEdit">Edit</string>
    <string name="tenant_blank">It looks like you do not have an unit yet. Please send your phone number to your landlord.</string>
    <string name="new_user_phone">Phone:</string>
    <string name="emailHint">Email</string>
    <string name="newUserWelcome">Welcome!</string>
    <string name="newLandlord">Landlord</string>
    <string name="newTenant">Tenant</string>
    <string name="typeOfUser">Please choose what type of account you would like. There is no way to change this after you pick, so choose wisely!</string>
    <string name="phone_numberHint">phone number</string>
    <string name="go_back">Go Back</string>
    <string name="strNoTenant">No tenant</string>
    <string name="strUnitNameHint">Unit Name</string>
    <string name="strUnitAddressHint">Address</string>
    <string name="strUnitAddressLine2Hint">Address line 2</string>
    <string name="strUnitCityHint">City</string>
    <string name="strUnitStateHint">State</string>
    <string name="strUnitZipHint">Zip</string>
    <string name="strUnitBedsHint">Beds</string>
    <string name="strUnitBathsHint">Baths</string>
    <string name="strUnitFloorSizeHint">Floor size</string>
    <string name="strUnitYearBuiltHint">Year built</string>
    <string name="strUnitRentHint">Rent amount</string>
    <string name="strUnitRentDueHint">Rent Due</string>
    <string name="prmtStatus">Status:</string>
    <string name="descUndoButton">Undo status</string>
    <string name="strNewTenant">New Tenant.</string>
    <string name="strComplete">Complete!</string>
    <string name="strAddTenantHint">Enter tenant\'s phone number</string>
    <string name="strPhoneNumberHInt">Phone Number</string>
    <string name="strEmailAddressHInt">Email Address</string>
    <string name="strEditTenantDescription">Edit Tenant</string>
    <string name="strUnitHint">Image of the current unit</string>
    <string name="strRepairRequestDescription">Description of the Repair Request</string>
</resources>